--- a/ext-systems/work-register/pom.xml
+++ b/ext-systems/work-register/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>org.job-hunter</groupId>
     <artifactId>work-register</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <packaging>war</packaging>
+
     <build>
         <plugins>
             <plugin>
@@ -17,8 +19,18 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -31,6 +43,13 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
