--- a/ext-systems/work-register/pom.xml
+++ b/ext-systems/work-register/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.job-hunter</groupId>
-    <artifactId>work-register</artifactId>
+    <artifactId>job-register</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
