--- a/ext-systems/work-register/src/main/webapp/WEB-INF/web.xml
+++ b/ext-systems/work-register/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,14 @@
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <display-name>Work Register</display-name>
+    <display-name>Job Register</display-name>
 
     <servlet>
         <servlet-name>JerseyServlet</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.jobhunter.work.web</param-value>
+            <param-value>com.jobhunter.job.web</param-value>
         </init-param>
         <init-param>
             <param-name>jersey.config.server.provider.scanning.recursive</param-name>
@@ -26,7 +26,7 @@
 
     <resource-ref>
         <description>DB Connection</description>
-        <res-ref-name>jdbc/workRegister</res-ref-name>
+        <res-ref-name>jdbc/jobRegister</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
