Add simple version of client for service request

--- a/job-hunter/pom.xml
+++ b/job-hunter/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.job-hunter</groupId>
     <artifactId>job-hunter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <slf4j.version>1.7.30</slf4j.version>
@@ -39,7 +39,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
