--- a/job-hunter/src/main/resources/config.properties
+++ b/job-hunter/src/main/resources/config.properties
@@ -2,3 +2,5 @@ db.url=jdbc:postgresql://localhost:5432/jh_employee_form
 db.login=postgres
 db.password=developer
 db.limit=1000
+
+jr.url=http://localhost:8080/job-register-1.0/rest/check/
